--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <ul class="contacts">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link"
-              ><svg width="16" height="12" class="contacts__image">
+              ><svg width="16" height="12" class="contacts__icon">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts__item">
             <a href="tel:+38096111111" class="contacts__link"
-              ><svg width="10" height="16" class="contacts__image">
+              ><svg width="10" height="16" class="contacts__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -57,7 +57,7 @@
       <section class="hero hero-overlay">
         <div class="container container--hero">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="btn" data-modal-open>Замовити послугу</button>
+          <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <section class="pre-about">
@@ -160,51 +160,51 @@
                 <div class="comand-card__label">
                   <h3 class="comand-card__title">Ігор Дем'яненко</h3>
                   <p lang="en" class="comand-card__desk">Product Designer</p>
-                  <ul class="soc-list">
-                    <li>
+                  <ul class="social-list">
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -219,51 +219,51 @@
                 <div class="comand-card__label">
                   <h3 class="comand-card__title">Ольга Рєпіна</h3>
                   <p lang="en" class="comand-card__desk">Frontend Developer</p>
-                  <ul class="soc-list">
-                    <li>
+                  <ul class="social-list">
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -278,51 +278,51 @@
                 <div class="comand-card__label">
                   <h3 class="comand-card__title">Микола Тарасов</h3>
                   <p lang="en" class="comand-card__desk">Marketing</p>
-                  <ul class="soc-list">
-                    <li>
+                  <ul class="social-list">
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -342,51 +342,51 @@
                 <div class="comand-card__label">
                   <h3 class="comand-card__title">Михайло Єрмаков</h3>
                   <p lang="en" class="comand-card__desk">UI Designer</p>
-                  <ul class="soc-list">
-                    <li>
+                  <ul class="social-list">
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
-                    <li>
+                    <li class="social-list__item">
                       <a
                         href=""
                         target="_blank"
                         rel="noopener noreferrer nofollow"
-                        class="comand-soc-link"
+                        class="social-link"
                       >
-                        <svg width="20" height="20">
+                        <svg width="20" height="20" class="social__icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -475,31 +475,31 @@
           </div>
           <div class="studio-social">
             <h2 class="footer-title">приєднуйтесь</h2>
-            <ul class="soc-list">
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+            <ul class="social-list">
+              <li class="social-list__item">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="social-link social-link--grey">
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+              <li class="social-list__item">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="social-link social-link--grey">
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+              <li class="social-list__item">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="social-link social-link--grey">
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+              <li class="social-list__item">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="social-link social-link--grey">
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -512,16 +512,16 @@
             ><span class="mailing-form__call">Підпишіться на розсилку</span>
             <input type="email" name="email" placeholder="E-mail" class="mailing-form__input" />
           </label>
-          <button type="submit">
-            <span class="ft-btn-text">Підписатися</span>
-            <svg width="24" height="24" class="button__image"><use href="./images/icons.svg#icon-send"></use></svg>
+          <button type="submit" class="mailing-form__button">
+            <span class="button__text">Підписатися</span>
+            <svg width="24" height="24" class="button__icon--end"><use href="./images/icons.svg#icon-send"></use></svg>
           </button>
         </form>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-close" data-modal-close>
+        <button type="button" class="modal__button" data-modal-close>
           <svg width="18" height="18"><use href="./images/icons.svg#icon-close"></use></svg>
         </button>
         <form name="service-form" class="service-form">
@@ -529,21 +529,21 @@
           <label for="service-form__name" class="service-form__label">Ім'я</label>
           <div class="service-form__entry-field">
             <input type="text" id="service-form__name" name="service-form__name" class="service-form__input" />
-            <svg width="18" height="18" class="service-form__image">
+            <svg width="18" height="18" class="service-form__icon">
               <use href="./images/icons.svg#icon-person"></use>
             </svg>
           </div>
           <label for="service-form__tel" class="service-form__label">Телефон</label>
           <div class="service-form__entry-field">
             <input type="tel" id="service-form__tel" name="service-form__tel" class="service-form__input" />
-            <svg width="18" height="18" class="service-form__image">
+            <svg width="18" height="18" class="service-form__icon">
               <use href="./images/icons.svg#icon-phone"></use>
             service-form__
           </div>
           <label for="service-form__email" class="service-form__label">Пошта</label>
           <div class="service-form__entry-field">
             <input type="email" id="service-form__email" name="service-form__email" class="service-form__input" />
-            <svg width="18" height="18" class="service-form__image">
+            <svg width="18" height="18" class="service-form__icon">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
           </div>
@@ -558,8 +558,7 @@
             <pre class="service-form__text">Погоджуюся з розсилкою та приймаю <a href="" target="_blank" rel="noopener noreferrer nofollow" class="service-form__link">Умови договору</a
               ></pre>
           </label>
-
-          <button type="submit" class="modal-btn">Відправити</button>
+          <button type="submit" class="service-form__button">Відправити</button>
         </form>
       </div>
     </div>
