--- a/portfolio.html
+++ b/portfolio.html
@@ -38,14 +38,14 @@
         <ul class="contacts">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link"
-              ><svg width="16" height="12" class="contacts__image">
+              ><svg width="16" height="12" class="contacts__icon">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts__item">
             <a href="tel:+38096111111" class="contacts__link"
-              ><svg width="10" height="16" class="contacts__image">
+              ><svg width="10" height="16" class="contacts__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -58,18 +58,20 @@
         <div class="container">
           <h1 class="visually-hidden">Наші роботи</h1>
           <ul class="buttons-list">
-            <li class="buttons-list__item"><button type="button" class="btn-menu">Усі</button></li>
             <li class="buttons-list__item">
-              <button type="button" class="btn-menu">Веб-сайти</button>
+              <button type="button" class="portfolio__button">Усі</button>
             </li>
             <li class="buttons-list__item">
-              <button type="button" class="btn-menu">Додатки</button>
+              <button type="button" class="portfolio__button">Веб-сайти</button>
             </li>
             <li class="buttons-list__item">
-              <button type="button" class="btn-menu">Дизайн</button>
+              <button type="button" class="portfolio__button">Додатки</button>
             </li>
             <li class="buttons-list__item">
-              <button type="button" class="btn-menu">Маркетинг</button>
+              <button type="button" class="portfolio__button">Дизайн</button>
+            </li>
+            <li class="buttons-list__item">
+              <button type="button" class="portfolio__button">Маркетинг</button>
             </li>
           </ul>
           <ul class="work-list">
@@ -273,31 +275,51 @@
           </div>
           <div class="studio-social">
             <h2 class="footer-title">приєднуйтесь</h2>
-            <ul class="soc-list">
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+            <ul class="social-list">
+              <li class="social-list__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="social-link social-link--grey"
+                >
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+              <li class="social-list__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="social-link social-link--grey"
+                >
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+              <li class="social-list__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="social-link social-link--grey"
+                >
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a href="" target="_blank" rel="noopener noreferrer nofollow" class="ft-soc-link">
-                  <svg width="20" height="20">
+              <li class="social-list__item">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="social-link social-link--grey"
+                >
+                  <svg width="20" height="20" class="social__icon">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -310,9 +332,11 @@
             ><span class="mailing-form__call">Підпишіться на розсилку</span>
             <input type="email" name="email" placeholder="E-mail" class="mailing-form__input" />
           </label>
-          <button type="submit">
-            <span class="ft-btn-text">Підписатися</span>
-            <svg width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg>
+          <button type="submit" class="mailing-form__button">
+            <span class="button__text">Підписатися</span>
+            <svg width="24" height="24" class="button__icon--end">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
           </button>
         </form>
       </div>
